--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,6 @@
     margin: 0;
     padding: 0;
 }
-
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 body {
     background: var(--title-text-color);
     font-family: 'Roboto', sans-serif;
@@ -296,6 +293,7 @@ ul {
     position: absolute;
     width: 528px;
     height: 581px;
+    padding: 40px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -303,8 +301,9 @@ ul {
     background-color: var(--title-text-color);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-.modal button {
+.modal .close-modal-button {
     position: absolute;
+    display: block;
     width: 30px;
     height: 30px;
     top: 8px;
@@ -312,10 +311,135 @@ ul {
     border-radius: 50%;
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    background-image: url(../img/svg/close-modal.svg);
-    background-position: center;
-    background-repeat: no-repeat;
 }
+.modal .close-modal-button svg {
+    fill: black;
+}
+.modal .close-modal-button:hover svg,
+.modal .close-modal-button:focus svg {
+    fill: var(--accent-color);
+}
+.modal h2 {
+    margin-bottom: 12px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1,15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+}
+.modal .form-field label,
+.modal form > label {
+    display: block;
+    margin-bottom: 4px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1,167;
+    letter-spacing: 0.01em;
+    color: var(--secondary-text-color);
+}
+.modal .form-field .input-field {
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding: 12px 42px ;
+    margin-bottom: 10px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+.modal textarea {
+    display: block;
+    width: 100%;
+    height: 120px;
+    margin-bottom: 20px;
+    padding: 12px 16px;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+.modal textarea::placeholder {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1,143;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
+.modal .form-field svg {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+}
+.modal .form-field {
+    position: relative;
+}
+.modal .form-field input:focus-within svg {
+    border-color: var(--accent-color);
+    fill: var(--accent-color);
+}
+.modal .checkbox-container label {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1,714;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
+} 
+.modal .checkbox-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+.modal .checkbox-container .checkbox {
+    appearance: none; 
+    width: 16px;
+    height: 15px;
+    box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 3px;
+    background-image: url(../img/svg/check.svg);
+    background-position: center;
+    background-repeat: no-repeat;   
+}
+.modal .checkbox-container .checkbox:checked {
+    background-color: var(--accent-color);
+    border: 2px solid var(--accent-color);
+}
+.modal .checkbox-container label {
+    display: inline-block;
+    margin-left: 8.38px;
+}
+.modal .checkbox-container label a {
+    text-decoration-line: underline;
+    color: var(--accent-color)
+}
+.modal .checkbox-container .svg-checkbox-container {
+    position: relative;
+    display: flex;
+}
+.modal .send-button {
+    display: flex;
+    width: 200px;
+    height: 50px;
+    margin: 30px auto 40px auto;
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 30px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    }
 .section-4 {
     padding: 94px 0;
     margin: 0 auto;
@@ -621,9 +745,9 @@ address li:last-child {
 }
 .projects-list .item a {
     position: relative;
-    width: 370px;
+    display: block;
 }
-.projects-list img {
+.projects-list img {    
     display: block;
 }
 .pop-up-container {
