--- a/css/styles.css
+++ b/css/styles.css
@@ -345,7 +345,6 @@ ul {
     width: 100%;
     height: 40px;
     padding: 12px 42px ;
-    margin-bottom: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
     border-radius: 4px;
@@ -376,9 +375,17 @@ ul {
 }
 .modal .form-field {
     position: relative;
+    margin-bottom: 10px;
 }
-.modal .form-field input:focus-within svg {
+.modal .form-field .input-field:focus {
+    outline: none;
     border-color: var(--accent-color);
+}
+.modal textarea:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+.modal .form-field .input-field:focus + svg {
     fill: var(--accent-color);
 }
 .modal .checkbox-container label {
@@ -406,6 +413,7 @@ ul {
     background-repeat: no-repeat;   
 }
 .modal .checkbox-container .checkbox:checked {
+    outline: none;
     background-color: var(--accent-color);
     border: 2px solid var(--accent-color);
 }
@@ -650,14 +658,14 @@ address li:last-child {
 .subscribe-container {
     display: block;
     padding-top: 12px;
-    margin-left: 93px;
+    margin-left: auto;
 }
 .subscribe-container form {
     display: flex;
-    width: 358px;
     height: 50px;
 }
 .subscribe-container form input {
+    display: block;
     width: 358px;
     height: 50px;
     margin-right: 12px;
